<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Feedback.feedback_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/AccentedTextMedium"
            android:layout_width="@dimen/feedback_form_textview_width"
            android:layout_height="wrap_content"
            android:text="@string/textview_ambiance" />

        <RatingBar
            android:id="@+id/rating_ambiance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0.0"
            android:stepSize="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/AccentedTextMedium"
            android:layout_width="@dimen/feedback_form_textview_width"
            android:layout_height="wrap_content"
            android:text="@string/textview_food" />

        <RatingBar
            android:id="@+id/rating_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0.0"
            android:stepSize="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/AccentedTextMedium"
            android:layout_width="@dimen/feedback_form_textview_width"
            android:layout_height="wrap_content"
            android:text="@string/textview_service" />

        <RatingBar
            android:id="@+id/rating_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0.0"
            android:stepSize="1" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_feedback_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/AccentedTextMedium">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_feedback_form_suggestion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/feedback_form_edittext_height"
            android:hint="@string/ff_suggestion_okay" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/bt_feedback_form_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>
